src/app/about/about.component.scss
// about page styling
#cardPhoto1 {
  display: block !important;
  height: 20% !important;
}

#leaderPhoto {
  position: relative;
  height: 269px;
}

.card {
  margin-left: 1% !important;
}

.card .card-image img {
  display: block;
  border-radius: 2px 2px 0 0;
  position: relative;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 41vh;
}

image[_ngcontent-c1] img[_ngcontent-c1] {
  display: block;
  border-radius: 2px 2px 0 0;
  position: relative;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 268px !important;
}

// on iphone6, shrink the cards
@media only screen and (max-width: 667px) {
  // row that holds all three cols
  .row[_ngcontent-c1] {
    display: -ms-flexbox;
    display: -webkit-box;
    display: flex;
    -ms-flex-wrap: wrap;
    /* flex-wrap: wrap; */
    display: inline-block;
    margin-right: -15px;
    margin-left: -15px;
    margin-top: 42%;
  } // logo
  .row {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-right: -15px;
    margin-left: -15px;
    margin-top: 42%;
  } //banner
  .row .col.s3 {
    width: 100%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .card[_ngcontent-c1] {
    margin-left: 2% !important;
    margin-right: 2%;
  }
   //logo container
  nav .brand-logo {
    left: 33% !important;
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
  }
}

